syntax = "proto3";
package pki.types;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

import "pki/types/grant.proto";

message ProposedCertificateRevocation {
  string subject = 1; 
  string subjectKeyId = 2; 
  repeated Grant approvals = 3;
  string subjectAsText = 4; 
}

